--- a/params.yaml
+++ b/params.yaml
@@ -1,8 +1,8 @@
 AUGMENTATION: True
-IMAGE_SIZE: [224, 224, 3] # as per VGG 16 model
+IMAGE_SIZE: [224, 224, 3] # as per VGG 16 model (need to learn)
 BATCH_SIZE: 16
 INCLUDE_TOP: False
 EPOCHS: 1
 CLASSES: 2
-WEIGHTS: imagenet
+WEIGHTS: imagenet # imagenet definition: used for image weights calculation in VGG 16
 LEARNING_RATE: 0.01
